# ComfyUI-SD-CN-Animation

./: .gitignore  README.md  __init__.py  flow_utils.py  flower_model.py  model_downloader.py  nodes_flower.py  nodes_prompt_schedule.py  nodes_txt2vid.py  nodes_vid2vid.py  pyproject.toml  requirements.txt  sampling_utils.py
examples/: example.json
nodes/: nodes_flower.py  nodes_motion_ctrl.py  nodes_prompt_schedule.py  nodes_txt2vid.py  nodes_utils.py  nodes_vid2vid.py
raft/: corr.py  extractor.py  raft.py  update.py
