[project]
name = "sd-cn-animation"
description = "Temporally coherent video generation and stylization for ComfyUI using optical flow. Port of SD-CN-Animation to ComfyUI custom nodes."
version = "1.0.1"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["opencv-python", "scikit-image", "scipy"]

[project.urls]
Repository = "https://github.com/pxl-pshr/ComfyUI-SD-CN-Animation"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/pxl-pshr/ComfyUI-SD-CN-Animation/wiki"
"Bug Tracker" = "https://github.com/pxl-pshr/ComfyUI-SD-CN-Animation/issues"

[tool.comfy]
PublisherId = "pxlpshr"
DisplayName = "ComfyUI-SD-CN-Animation"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

